[package]
name = "derive_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_parser_macro = { path = "derive_parser_macro" }
variadics_please = "1.1.0"
thiserror = "2.0.17"

[workspace]
resolver = "2"
members = [
  "derive_parser_macro"
]

[dev-dependencies]
logos = "0.15.1"
ariadne = "0.6.0"
