[package]
name = "derive_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_parser_macro = { path = "derive_parser_macro" }
variadics_please = "1.1.0"
thiserror = "2.0.17"

[workspace]
resolver = "2"
members = [
  "derive_parser_macro"
]

[dev-dependencies]
logos = "0.15.1"
ariadne = "0.6.0"
rustyline = { version = "17.0.1", features = ["derive"] }
anyhow = "1.0.102"
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display"] }
