[package]
name = "derive_parser"
description = "Derive a parser from your CST"
repository = "https://github.com/jakesarjeant/derive_parser"
readme = "README.md"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
keywords = [ "parser", "parsing", "derive", "proc_macro", "syntax" ]
categories = [ "parsing" ]

[dependencies]
derive_parser_macro = { version = "0.1.0", path = "derive_parser_macro" }
variadics_please = "1.1.0"
thiserror = "2.0.17"

[workspace]
resolver = "2"
members = [
  "derive_parser_macro"
]

[dev-dependencies]
logos = "0.15.1"
ariadne = "0.6.0"
rustyline = { version = "17.0.1", features = ["derive"] }
anyhow = "1.0.102"
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["display"] }
