[package]
name = "derive_parser_macro"
description = "Derive macros for `derive_parser`"
version = "0.1.0"
repository = "https://github.com/jakesarjeant/derive_parser/tree/master/derive_parser_macro"
readme = "../README.md"
edition = "2024"
license = "BSD-3-Clause"
keywords = [ "parser", "parsing", "derive", "proc_macro", "syntax" ]
categories = [ "parsing" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["full", "visit-mut"] }
